namespace ValidationFramework.Notification;

public enum ValidationEventType
{
    Validated,
    Invalid
}
